--- a/wp-content/themes/miradas/scss/abstracts/_mixins_theme.scss
+++ b/wp-content/themes/miradas/scss/abstracts/_mixins_theme.scss
@@ -34,6 +34,12 @@
   text-transform: capitalize;
 }
 
+@mixin cover() {
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+
 @mixin site__text() {
   @include h5();
   color: $primary-color;
