--- a/wp-content/themes/miradas/scss/main.scss
+++ b/wp-content/themes/miradas/scss/main.scss
@@ -48,7 +48,8 @@ Text Domain: twentysixteen
   'blocks/logos',
   'blocks/_contact',
   'blocks/_buttons',
-  'blocks/_video';
+  'blocks/_video',
+  'blocks/_que_ofrecemos';
 
   // Posts
   @import
