--- a/wp-content/themes/miradas/scss/main.scss
+++ b/wp-content/themes/miradas/scss/main.scss
@@ -49,7 +49,8 @@ Text Domain: twentysixteen
   'blocks/_contact',
   'blocks/_buttons',
   'blocks/_video',
-  'blocks/_que_ofrecemos';
+  'blocks/_que_ofrecemos',
+  'blocks/_image_with_text';
 
   // Posts
   @import
